# libfdvcpp

./: CMakeLists.txt  README.md
Core/: AMain.abstract.cpp  AMain.abstract.hpp  Exception.class.cpp  Exception.class.hpp  Object-MemManager.class.cpp  Object-MemManager.class.hpp  Object.abstract.cpp  Object.abstract.hpp  Time.class.cpp  Time.class.hpp  macro.hpp  make_array.template.hpp
IO/: Color.class.cpp  Color.class.hpp  ConfigFile.class.cpp  ConfigFile.class.hpp  ConfigFile.class.inline.hpp  Logger.class.cpp  Logger.class.hpp  OutputStream.class.cpp  OutputStream.class.hpp  Term.class.hpp
Math/: Vector.class.hpp
Misc/: BmpImg.class.cpp  BmpImg.class.hpp  stringConvert.cpp  stringConvert.hpp  test.cpp
String/: trim.inline.hpp
